--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </div>
 
     <script>
-        const validCodes = ['ABC123', 'XYZ789', 'IDS456', 'PQR321', 'MNO654'];
+        const validCodes = ['ABC123', 'XYZ789', 'IDS456', 'PQR321', 'MNO654', 'DEF987', 'GHI654', 'JKL321', 'RST789', 'UVW123', 'BCD234', 'CDE345', 'EFG456', 'FGH567', 'HIJ678', 'IJK789', 'KLM890', 'LMN901', 'NOP012', 'OPQ123', 'QRS234', 'STU345', 'TUV456', 'VWX567', 'WXY678', 'XYZ789', 'YZA890', 'ZAB901', 'ACE123', 'BDF234', 'CEG345', 'DFH456', 'EGI567', 'FHJ678', 'GIK789', 'HJL890', 'IKM901', 'JLN012', 'KMO123', 'LNP234', 'MOQ345', 'NPR456', 'OQS567', 'PRT678', 'QSU789', 'RTV890', 'SUW901', 'TVX012', 'UWY123', 'VXZ234', 'WYA345', 'XZB456', 'YAC567', 'ZBD678', 'AEC789', 'BFD890', 'CGE901', 'DHF012', 'EIG123', 'FJH234', 'GKI345', 'HLJ456', 'IMK567', 'JNL678', 'KOM789', 'LPN890', 'MQO901', 'NRP012', 'OSQ123', 'PTR234', 'QUS345', 'RVT456', 'SWU567', 'TXV678', 'UYW789', 'VZX890', 'WAY901', 'XBZ012', 'YCA123', 'ZDB234', 'AEC345', 'BFD456', 'CGE567', 'DHF678', 'EIG789', 'FJH890', 'GKI901', 'HLJ012', 'IMK123', 'JNL234'];
         const codeInput = document.getElementById('codeInput');
         const warning = document.getElementById('warning');
         const codePage = document.getElementById('codePage');
